force-app/main/default/objects/Competitor_Location__c/Competitor_Location__c.object-meta.xml
<CustomObject>
    <description>Tracks competitor retail outlets near candidate expansion sites.</description>
    <label>Competitor Location</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>