force-app/main/default/objects/Competitor_Location__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>