force-app/main/default/objects/Competitor_Location__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Competitor</fullName>
                <default>true</default>
                <label>Direct Competitor</label>
            </value>
            <value>
                <fullName>Indirect Competitor</fullName>
            </value>
            <value>
                <fullName>Complementary Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>