force-app/main/default/objects/Competitor_Location__c/fields/Distance_From_Site_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Site_Km__c</fullName>
    <label>Distance From Site (km)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>