force-app/main/default/objects/Competitor_Location__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <label>Estimated Revenue (INR/month)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>