force-app/main/default/objects/Competitor_Location__c/fields/Expansion_Site__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expansion Site</label>
    <referenceTo>Expansion_Site__c</referenceTo>
    <relationshipLabel>Competitor Locations</relationshipLabel>
    <relationshipName>Competitor_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>