force-app/main/default/objects/Competitor_Location__c/fields/PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Code__c</fullName>
    <label>PIN Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>