force-app/main/default/objects/Competitor_Location__c/fields/Store_Size_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Store_Size_SqFt__c</fullName>
    <label>Store Size (sq ft)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>