force-app/main/default/objects/Competitor_Location__c/fields/Year_Established__c.field-meta.xml
<CustomField>
    <fullName>Year_Established__c</fullName>
    <label>Year Established</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>